--- a/renovate.json
+++ b/renovate.json
@@ -21,17 +21,17 @@
 		{
 			"groupName": "Fastify ecosystem",
 			"groupSlug": "fastify",
-			"matchPackageNames": ["fastify{/,}**"]
+			"matchPackageNames": ["fastify{/,}**", "@fastify{/,}**"]
 		},
 		{
 			"groupName": "Svelte ecosystem",
 			"groupSlug": "svelte",
-			"matchPackageNames": ["svelte{/,}**"]
+			"matchPackageNames": ["svelte{/,}**", "@sveltejs{/,}**"]
 		},
 		{
 			"groupName": "ESLint ecosystem",
 			"groupSlug": "eslint",
-			"matchPackageNames": ["eslint{/,}**"]
+			"matchPackageNames": ["eslint{/,}**", "@eslint{/,}**"]
 		},
 		{
 			"automerge": true,
