chore: update renovate

--- a/.renovaterc
+++ b/.renovaterc
@@ -45,6 +45,7 @@
 		},
 		{
 			"automerge": true,
+			"autoApprove": true,
 			"matchPackageNames": ["@types/**"],
 			"matchUpdateTypes": ["patch"]
 		}
