ci: update workflows

--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -31,6 +31,7 @@ jobs:
             client:
               - 'apps/client/**'
             shared:
+              - '.github/workflows/check-pr.yml'
               - 'packages/**'
               - 'package.json'
               - 'yarn.lock'
