--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:18.0-alpine
+    image: ghcr.io/railwayapp-templates/postgres-ssl:16
     container_name: shortn-dev-postgres
     env_file:
       - .env.local.dev
@@ -21,7 +21,7 @@ services:
       - shortn-dev-network
 
   redis:
-    image: redis:8.2-alpine
+    image: railwayapp/redis:8.2
     container_name: shortn-dev-redis
     command: redis-server --requirepass password
     env_file:
