ci: update deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
             client:
               - 'apps/client/**'
             shared:
+              - '.github/workflows/deploy.yml'
               - 'packages/**'
               - 'package.json'
               - 'yarn.lock'
