--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,13 +21,13 @@ services:
       - shortn-dev-network
 
   redis:
-    image: railwayapp/redis:8.2
+    image: redis:8.2-alpine
     container_name: shortn-dev-redis
     command: redis-server --requirepass password
     env_file:
       - .env.local.dev
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "-a", "password", "ping"]
       interval: 2s
       timeout: 3s
       retries: 5
