--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
 	"devDependencies": {
 		"prettier": "^3.6.2",
 		"rimraf": "^6.0.1",
-		"turbo": "^2.5.8",
-		"typescript": "5.9.3"
+		"turbo": "^2.5.8"
 	},
 	"engines": {
 		"node": "24.10.0"
